kubernetes/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: asia-northeast1-docker.pkg.dev/stego-426014/stego-docker-prd/web:543fe88d005e0789746c75da05f58f0b686c0664
          ports:
            - containerPort: 8080
              protocol: TCP
