kubernetes/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: web
  type: NodePort
